--- a/package.json
+++ b/package.json
@@ -4,5 +4,6 @@
 	},
 	"dependencies": {
 		"@noble/hashes": "^1.4.0"
-	}
+	},
+	"packageManager": "pnpm@9.0.6+sha1.648f6014eb363abb36618f2ba59282a9eeb3e879"
 }
