--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -7,6 +7,7 @@
 		// --------------------------------
 		// transpilation
 		// --------------------------------
+		"outDir": "dist",
 
 		// target modern ES
 		"target": "ES2022",
@@ -18,8 +19,8 @@
 		"moduleDetection": "force",
 
 		// Bundler mode
-		"allowImportingTsExtensions": true,
-		"noEmit": true,
+		// "allowImportingTsExtensions": true,
+		// "noEmit": true,
 
 		// --------------------------------
 		// preferences
@@ -64,6 +65,6 @@
 		"allowJs": true,
 		"moduleResolution": "Bundler",
 		"forceConsistentCasingInFileNames": true,
-		"verbatimModuleSyntax": true,
+		"verbatimModuleSyntax": false,
 	}
 }
