--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "build": "vite build",
     "dev": "vite dev"
   },
   "devDependencies": {
@@ -23,6 +24,8 @@
   "dependencies": {
     "@blake.regalia/belt": "^0.37.0",
     "@noble/hashes": "^1.4.0",
-    "@solar-republic/types": "^0.2.12"
+    "@solar-republic/types": "^0.2.12",
+    "monaco-editor": "^0.50.0",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
