--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -5,25 +5,40 @@ on:
     branches:
       - main
 
+env:
+  REGISTRY: ghcr.io
+  ORG_NAME: solarrepublic
+  REPO_NAME: cosmos-power-stream
+
 jobs:
   build-push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: ghcr.io Login
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
         
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            ${{ env.REGISTRY }}/${{ env.ORG_NAME }}/${{ env.REPO_NAME }}/app
+
       - name: Build and Push
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./app.Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository }}/app:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
