--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -33,6 +33,8 @@ jobs:
         with:
           images: |
             ${{ env.REGISTRY }}/${{ env.ORG_NAME }}/${{ env.REPO_NAME }}/app
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and Push
         uses: docker/build-push-action@v5
