--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -17,30 +17,71 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Docker Buildx
+      - name: Docker buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: ghcr.io Login
+      - name: ghcr.io login
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set image prefix
+        run: |
+          echo "IMAGE_PREFIX=${REGISTRY}/${ORG_NAME}/${REPO_NAME}"
         
-      - name: Extract metadata
-        id: meta
+      - name: Extract metadata for app
+        id: meta_app
         uses: docker/metadata-action@v4
         with:
           images: |
-            ${{ env.REGISTRY }}/${{ env.ORG_NAME }}/${{ env.REPO_NAME }}/app
+            ${{ env.IMAGE_PREFIX }}/app
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Build and Push
+      - name: Build and push app
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./app.Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta_app.outputs.tags }}
+          labels: ${{ steps.meta_app.outputs.labels }}
+
+      - name: Extract metadata for frontend
+        id: meta_frontend
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            ${{ env.IMAGE_PREFIX }}/frontned
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
+
+      - name: Build and push frontend
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./frontend.Dockerfile
+          push: true
+          tags: ${{ steps.meta_frontend.outputs.tags }}
+          labels: ${{ steps.meta_frontend.outputs.labels }}
+  
+      - name: Extract metadata for db
+        id: meta_db
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            ${{ env.IMAGE_PREFIX }}/db-postgres
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
+
+      - name: Build and push db
+        uses: docker/build-push-action@v5
+        with:
+          context: ./packages/backend/database/postgres
+          file: Dockerfile
+          push: true
+          tags: ${{ steps.meta_db.outputs.tags }}
+          labels: ${{ steps.meta_db.outputs.labels }}
+  
