--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Set image prefix
         run: |
-          echo "IMAGE_PREFIX=${REGISTRY}/${ORG_NAME}/${REPO_NAME}"
+          echo "IMAGE_PREFIX=${REGISTRY}/${ORG_NAME}/${REPO_NAME}" >> $GITHUB_ENV
         
       - name: Extract metadata for app
         id: meta_app
