dev: resource docs

--- a/packages/backend/database/postgres/Dockerfile
+++ b/packages/backend/database/postgres/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM postgres:latest
 
-ENV POSTGRES_DATABASE=wsm
+ENV POSTGRES_DATABASE=cosmos_power_stream
 ENV POSTGRES_USER=postgres
 ENV POSTGRES_PASSWORD=cosmos
 
